-Wattribute warning in BreakLines.cpp https://bugs.webkit.org/show_bug.cgi?id=211784

Patch by Michael Catanzaro <mcatanzaro@gnome.org> on 2020-05-12
Reviewed by Darin Adler.

Remove export attribute. These only work in header files.

* rendering/BreakLines.cpp:

Canonical link: https://commits.webkit.org/224693@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261580 268f45cc-cd09-0410-ab3c-d52691b4dbfc